<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <Button
        android:id="@+id/button7"
        android:layout_width="153dp"
        android:layout_height="55dp"
        android:onClick="ktb4"
        android:text="вернуться в меню"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/button4"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:onClick="ktb1"
        android:text="@string/button4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <Button
        android:id="@+id/button10"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:text="@string/button10"
        android:onClick="ktb3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button9"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/button9"
        android:onClick="ktb2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="370dp"
        android:layout_height="261dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        app:srcCompat="@drawable/imege5" />

</androidx.constraintlayout.widget.ConstraintLayout>